# Academic-Co-Pilot

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Design.md  Dockerfile  LICENSE  PRD.md  README.md  changelog.md  docker-compose.prod.yml  docker-compose.yml  guideline.md  master_prompt.md  memory.md  project_structure.md  pyproject.toml  run-prod.sh  sample.md  skills.md
app/: main.py
app/agents/: __init__.py  academic_agent.py  base.py  deep_agent.py  hitl.py  screener_agent.py  tools.py
app/api/schemas/: chat.py  ingestion.py
app/core/: checkpointer.py  config.py  database.py  db.py  security.py  sessions.py
app/models/: __init__.py  auth.py
app/repositories/: __init__.py  llm.py
app/services/: session_service.py
app/tools/: __init__.py  drafter.py  exporter.py  file_utils.py  humanizer.py  infographic.py  ingestor.py  literature.py  planner.py  reference_checker.py  retrieval.py  sandbox.py  screener.py  task_planner.py  venue_suggester.py
deploy/: nginx-academic.conf
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  auth.js  sessions.js  styles.css
frontend/src/components/: AgentSelector.jsx  ChatWindow.jsx  FileSidebar.jsx  GuidelinesPage.jsx  InterruptCard.jsx  LoginPage.jsx  Message.jsx  (+5 more)
tests/: conftest.py  run_all.py  test_deep_agent_tools.py  test_drafter_data.py  test_exporter.py  test_hitl.py  test_literature.py  test_llm_repo.py  test_reference_checker.py  test_retrieval.py  test_sessions.py  test_task_planner.py  test_venue_suggester.py
(+5 files in other folders)
