[project]
name = "paper-agent"
version = "0.1.0"
description = "End-to-End Academic Co-Pilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "langchain>=1.3.0",
    "langchain-openai>=1.2.0",
    "langchain-community>=0.4.0",
    "langchain-experimental>=0.4.0",
    "langgraph>=1.2.0",
    "langgraph-checkpoint>=4.1.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "openai>=1.30.0",
    "psycopg2-binary>=2.9.9",
    "psycopg[binary,pool]>=3.1",
    "sqlalchemy>=2.0.30",
    "pgvector>=0.2.5",
    "bcrypt>=4.0.1",
    "pyjwt>=2.8.0",
    "email-validator>=2.1.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.2",
    "numpy>=1.26.0",
    "openpyxl>=3.1.2",
    "matplotlib>=3.9.0",
    "python-multipart>=0.0.9",
    "langsmith>=0.1.63",
    "httpx>=0.27.0",
    "python-docx>=1.1.0",
    "pypdf>=4.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
